--- a/src/components/FilterSelected/FilterSelected.scss
+++ b/src/components/FilterSelected/FilterSelected.scss
@@ -26,3 +26,16 @@
 
   color: #4a4a4a;
 }
+
+@media only screen and (max-width: 600px) {
+  .options_selected {
+    margin-left: 0px;
+    width: fit-content;
+    display: inline-flex;
+    margin-bottom: 20px;
+    margin-top: -10px;
+    &:nth-child(3) {
+      margin-left: 8px;
+    }
+  }
+}
