--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -13,7 +13,7 @@
   transition: transform 0.25s ease-out;
 }
 
-#profileImage {
+.profileImage {
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -23,7 +23,10 @@
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
-  line-height: 65px;
+  // line-height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* identical to box height, or 150% */
 }
 
