--- a/src/components/card-list/card-list.styles.scss
+++ b/src/components/card-list/card-list.styles.scss
@@ -50,6 +50,7 @@
   text-align: left;
   display: flex;
   align-items: baseline;
+  margin-top: 10px;
 }
 
 @media only screen and (max-width: 600px) {
