--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -9,8 +9,8 @@
   cursor: pointer;
   -moz-osx-font-smoothing: grayscale;
   backface-visibility: hidden;
-  transform: translateZ(0);
-  transition: transform 0.25s ease-out;
+  // transform: translateZ(0);
+  // transition: transform 0.25s ease-out;
 }
 
 .profileImage {
